--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7,25 +7,31 @@ html, body {
 .mdl-demo .mdl-layout.is-small-screen .mdl-layout__header-row h3 {
   font-size: inherit;
 }
+
 .mdl-demo .mdl-layout__tab-bar-button {
   display: none;
 }
+
 .mdl-demo .mdl-layout.is-small-screen .mdl-layout__tab-bar .mdl-button {
   display: none;
 }
+
 .mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar,
 .mdl-demo .mdl-layout:not(.is-small-screen) .mdl-layout__tab-bar-container {
   overflow: visible;
 }
+
 .mdl-demo .mdl-layout__tab-bar-container {
   height: 64px;
 }
 
-.mdl-list__item-avatar{
+.mdl-list__item-avatar {
 }
+
 .mdl-textfield__expandable-holder {
   display: inline;
 }
+
 .mdl-demo .mdl-layout__tab-bar {
   padding: 0;
   padding-left: 16px;
@@ -33,58 +39,71 @@ html, body {
   height: 100%;
   width: 100%;
 }
+
 .mdl-demo .mdl-layout__tab-bar .mdl-layout__tab {
   height: 64px;
   line-height: 64px;
 }
+
 .mdl-demo .mdl-layout__tab-bar .mdl-layout__tab.is-active::after {
   background-color: white;
   height: 4px;
 }
+
 .mdl-demo main > .mdl-layout__tab-panel {
   padding: 8px;
-  padding-top: 48px;
 }
+
 .mdl-demo .mdl-card {
-  height: auto;
+  min-height: 0;
   display: flex;
   flex-direction: column;
+
 }
+
 .mdl-demo .mdl-card > * {
   height: auto;
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text {
+
+.mdl-demo .mdl-card .mdl-card__board-game {
   text-align: center;
-  margin: 40px;
   flex-grow: 1;
-  padding: 0;
+  padding: 20px;
   color: inherit;
-  width: calc(100% - 80px);
+  /*width: calc(100% - 80px);*/
 }
-.mdl-demo .mdl-card .mdl-card__supporting-text .mdl-card__button-board {
-margin-top: 4px;
+
+.mdl-demo .mdl-card .mdl-card__board-game .mdl-card__button-board {
+  margin-top: 4px;
+  text-align: center;
 }
-.mdl-demo.mdl-demo .mdl-card__supporting-text h4 {
+
+.mdl-demo .mdl-card__board-game h4 {
   margin-top: 0;
   margin-bottom: 20px;
 }
+
 .mdl-demo .mdl-card__actions {
   margin: 0;
   padding: 4px 40px;
   color: inherit;
 }
+
 .mdl-demo .mdl-card__actions a {
   color: #00BCD4;
   margin: 0;
 }
+
 .mdl-demo .mdl-card__actions a:hover,
 .mdl-demo .mdl-card__actions a:active {
   color: inherit;
   background-color: transparent;
 }
+
 .mdl-demo .mdl-card__supporting-text + .mdl-card__actions {
   border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
+
 .mdl-demo #add {
   position: absolute;
   right: 40px;
@@ -96,29 +115,36 @@ margin-top: 4px;
   position: relative;
   margin-bottom: 48px;
 }
+
 .mdl-demo section.section--center {
   max-width: 860px;
 }
+
 .mdl-demo #features section.section--center {
   max-width: 620px;
 }
-.mdl-demo section > header{
+
+.mdl-demo section > header {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .mdl-demo section > .section__play-btn {
   min-height: 200px;
 }
+
 .mdl-demo section > header > .material-icons {
   font-size: 3rem;
 }
+
 .mdl-demo section > button {
   position: absolute;
   z-index: 99;
   top: 8px;
   right: 8px;
 }
+
 .mdl-demo section .section__circle {
   display: flex;
   align-items: center;
@@ -126,56 +152,84 @@ margin-top: 4px;
   flex-grow: 0;
   flex-shrink: 1;
 }
+
 .mdl-demo section .section__text {
   flex-grow: 1;
   flex-shrink: 0;
   padding-top: 8px;
 }
+
 .mdl-demo section .section__text h5 {
   font-size: inherit;
   margin: 0;
   margin-bottom: 0.5em;
 }
+
 .mdl-demo section .section__text a {
   text-decoration: none;
 }
+
 .mdl-demo section .section__circle-container > .section__circle-container__circle {
   width: 64px;
   height: 64px;
   border-radius: 32px;
   margin: 8px 0;
 }
+
 .mdl-demo section.section--footer .section__circle--big {
   width: 100px;
   height: 100px;
   border-radius: 50px;
   margin: 8px 32px;
 }
+
 .mdl-demo .is-small-screen section.section--footer .section__circle--big {
   width: 50px;
   height: 50px;
   border-radius: 25px;
   margin: 8px 16px;
 }
+
 .mdl-demo section.section--footer {
   padding: 64px 0;
   margin: 0 -8px -8px -8px;
 }
+
 .mdl-demo section.section--center .section__text:not(:last-child) {
-  border-bottom: 1px solid rgba(0,0,0,.13);
+  border-bottom: 1px solid rgba(0, 0, 0, .13);
 }
+
 .mdl-demo .mdl-card .mdl-card__supporting-text > h3:first-child {
   margin-bottom: 24px;
 }
+
 .mdl-demo .mdl-layout__tab-panel:not(#overview) {
-  background-color: white;
+  /*background-color: white;*/
 }
+.mdl-demo .mdl-card .demo-list-two {
+  margin: 0px;
+  background-color: lightblue;
+  padding: 10px;
+}
+.mdl-demo .mdl-card .demo-list-two .mdl-list__item--two-line{
+  height: 56px;
+  background-color: lemonchiffon;
+  border-radius: 28px;
+  margin: 5px 0;
+}
+
 .mdl-demo #features section {
   margin-bottom: 72px;
 }
+
+.history-section {
+  min-width: 0px
+}
+
 .mdl-demo #features h4, #features h5 {
   margin-bottom: 16px;
 }
+
 .mdl-demo .toc {
   border-left: 4px solid #C1EEF4;
   margin: 24px;
@@ -184,10 +238,12 @@ margin-top: 4px;
   display: flex;
   flex-direction: column;
 }
+
 .mdl-demo .toc h4 {
   font-size: 0.9rem;
   margin-top: 0;
 }
+
 .mdl-demo .toc a {
   color: #4DD0E1;
   text-decoration: none;
@@ -195,11 +251,12 @@ margin-top: 4px;
   line-height: 28px;
   display: block;
 }
+
 .mdl-demo .mdl-menu__container {
   z-index: 99;
 }
 
-.select-board  p {
+.select-board p {
   margin: 1px;
   font-size: inherit;
 }
@@ -207,6 +264,15 @@ margin-top: 4px;
 .demo-layout-transparent {
   background-color: #C1EEF4;
 }
+
+.avatar {
+  height: 40px;
+  width: 40px;
+  box-sizing: border-box;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+
 .demo-layout-transparent .mdl-layout__header,
 .demo-layout-transparent .mdl-layout__drawer-button {
   /* This background is dark, so we set text to white. Use 87% black instead if
@@ -214,7 +280,7 @@ margin-top: 4px;
   color: black;
 }
 
-@media only screen and (min-width:851px){
+@media only screen and (min-width: 851px) {
   /*.mdl-layout__drawer-button {
     display: none;
   }*/
